--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -3,55 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>cssMemSlider</title>
-    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+    <title>Redirecting...</title>
 </head>
 
 <body>
-    <div class="container">
-        <input type="radio" name="slider" id="slide1" checked>
-        <input type="radio" name="slider" id="slide2">
-        <input type="radio" name="slider" id="slide3">
-        <input type="radio" name="slider" id="slide4">
-
-        <div class="slides-wrapper">
-            <div class="slides">
-                <div class="slide">
-                    <img src="./assets/images/1.jpg" alt="meme">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/2.jpg" alt="meme">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/3.jpg" alt="meme">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/4.jpg" alt="meme">
-                </div>
-            </div>
-        </div>
-
-        <div class="wrapper">
-            <div class="description-wrapper">
-                <div class="descriptions">
-                    <div class="description">Коротко о языке программирование C</div>
-                    <div class="description">Кому лень открыть PS</div>
-                    <div class="description">Учусь на хакера</div>
-                    <div class="description">Типичный рабочий день</div>
-                </div>
-            </div>
-
-            <div class="labels">
-                <label for="slide1"><div class="circle"></div></label>
-                <label for="slide2"><div class="circle"></div></label>
-                <label for="slide3"><div class="circle"></div></label>
-                <label for="slide4"><div class="circle"></div></label>
-            </div>
-        </div>
-
-    </div>
+    <script>
+        window.onload = function() {
+            // similar behavior as clicking on a link
+            window.location.href = "https://github.com/Ismoil6ek/cssMemSlider/pull/1";
+        }
+    </script>
 </body>
 
 </html>
