feat: fix issues given by checker

--- a/cssMemSliderTask/index.html
+++ b/cssMemSliderTask/index.html
@@ -36,10 +36,18 @@
         <div class="wrapper">
             <div class="description-wrapper">
                 <div class="descriptions">
-                    <div class="description">Коротко о языке программирование C</div>
-                    <div class="description">Кому лень открыть PS</div>
-                    <div class="description">Учусь на хакера</div>
-                    <div class="description">Типичный рабочий день</div>
+                    <div class="description">
+                        <div>Коротко о языке программирование C</div>
+                    </div>
+                    <div class="description">
+                        <div>Кому лень открыть PS</div>
+                    </div>
+                    <div class="description">
+                        <div>Учусь на хакера</div>
+                    </div>
+                    <div class="description">
+                        <div>Типичный рабочий день</div>
+                    </div>
                 </div>
             </div>
 
